flex-wrap issue

--- a/src/common/Player.scss
+++ b/src/common/Player.scss
@@ -4,13 +4,13 @@
     padding: .1rem  0;
     margin: 0 0 1rem;
 
+    flex-wrap: wrap;
     @include flex();
 
     .infoItem {
         margin: 0 .5rem;
 
-        flex-wrap
-: wrap;
+        flex-wrap: wrap;
         @include flex(flex-start);
 
         h1,
